# inox2d-webgl

./: .gitignore  Cargo.toml  index.html  tailwind.config.js
.cargo/: config.toml
.github/workflows/: rust.yml
src/: inox2d_component.rs  main.rs  scene.rs
