[package]
name = "inox2d-webgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bytes = "1.4.0"
console_error_panic_hook = "0.1.7"
dioxus = "0.3.2"
dioxus-html-macro = "0.3.0"
dioxus-web = "0.3.2"
glam = "0.24.0"
glow = "0.12.1"
inox2d = { git = "https://github.com/Inochi2D/inox2d.git" }
js-sys = "0.3.64"
reqwest = "0.11.18"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-time = "0.2.0"
winit = { version = "0.28.6", default-features = false }

[dependencies.web-sys]
version = "0.3.61"
features = [
    "Window",
    "Location",
    "Navigator",
    "Element",
    "HtmlElement",
    "Document",
]

[profile.release]
lto = true
codegen-units = 1

